--- a/windows/AndroidTraceFile/AndroidTraceFile.vcxproj
+++ b/windows/AndroidTraceFile/AndroidTraceFile.vcxproj
@@ -137,28 +137,28 @@
     <ClCompile Include="..\..\src\Android\Call.cpp" />
     <ClCompile Include="..\..\src\Android\ColorController.cpp" />
     <ClCompile Include="..\..\src\Android\Common.cpp" />
-    <ClCompile Include="..\..\src\Android\DmTraceReader.cpp" />
+    <ClCompile Include="..\..\src\Android\DmTraceControl.cpp" />
+    <ClCompile Include="..\..\src\Android\DmTraceData.cpp" />
     <ClCompile Include="..\..\src\Android\MethodData.cpp" />
     <ClCompile Include="..\..\src\Android\ProfileData.cpp" />
     <ClCompile Include="..\..\src\Android\ProfileNode.cpp" />
     <ClCompile Include="..\..\src\Android\ProfileSelf.cpp" />
     <ClCompile Include="..\..\src\Android\ThreadData.cpp" />
     <ClCompile Include="..\..\src\Android\TimeBase.cpp" />
-    <ClCompile Include="..\..\src\Android\TimeLineView.cpp" />
     <ClCompile Include="..\..\src\Android\TraceUnits.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\Android\Call.hpp" />
     <ClInclude Include="..\..\src\Android\ColorController.hpp" />
     <ClInclude Include="..\..\src\Android\Common.hpp" />
-    <ClInclude Include="..\..\src\Android\DmTraceReader.hpp" />
+    <ClInclude Include="..\..\src\Android\DmTraceControl.hpp" />
+    <ClInclude Include="..\..\src\Android\DmTraceData.hpp" />
     <ClInclude Include="..\..\src\Android\MethodData.hpp" />
     <ClInclude Include="..\..\src\Android\ProfileData.hpp" />
     <ClInclude Include="..\..\src\Android\ProfileNode.hpp" />
     <ClInclude Include="..\..\src\Android\ProfileSelf.hpp" />
     <ClInclude Include="..\..\src\Android\ThreadData.hpp" />
     <ClInclude Include="..\..\src\Android\TimeBase.hpp" />
-    <ClInclude Include="..\..\src\Android\TimeLineView.hpp" />
     <ClInclude Include="..\..\src\Android\TraceAction.hpp" />
     <ClInclude Include="..\..\src\Android\TraceUnits.hpp" />
   </ItemGroup>
