1. Split the client into 3 parts: timeline, timescale and row labels 2. Reform the code structure for multiple platform support

--- a/windows/DmTraceViewer.vcxproj
+++ b/windows/DmTraceViewer.vcxproj
@@ -80,7 +80,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)..\src\Android;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)..\src\Android;D:\Developer\Boost\boost_1_59_0;$(IncludePath)</IncludePath>
     <LibraryPath>$(OutDir);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
