--- a/windows/DmTraceViewer.vcxproj.filters
+++ b/windows/DmTraceViewer.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="PropertiesWnd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ThreadLabelView.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DmTraceViewer.cpp">
@@ -90,6 +93,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PropertiesWnd.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ThreadLabelView.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
